# stream-it

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: torrents.py
app/models/: torrent.py
app/services/: torrent_engine.py  torrent_manager.py
documents/: README.contract.md  contract.txt
